src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --global-stylesheet-marker: 1;

    --background: 0 0% 100%;
    --foreground: 240 4.2% 13.9%;

    --gray-100: 240 9.7% 93.9%;
    --gray-200: 240 4.6% 87.3%;
    --gray-300: 240 3% 80.6%;
    --gray-500: 240 1.3% 53.9%;
    --gray-600: 240 1.4% 40.6%;
    --gray-700: 240 2.8% 27.3%;
    --gray-800: var(--foreground);

    --card: 0 0% 100%;
    --card-foreground: var(--foreground);
    --popover: 240 4% 14%;
    --popover-foreground: var(--background);
    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;
    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;
    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;
    --accent: var(--gray-100);
    --accent-foreground: var(--gray-800);
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;
    --success: 142 70.6% 45.3%;
    --success-foreground: 210 40% 98%;
    --border: var(--gray-100);
    --input: var(--gray-300);
    --ring: var(--foreground);
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
    --radius: 0.5rem;

    --scrollbar-foreground: hsl(var(--gray-200));
    --scrollbar-background: transparent;

    --screen-min: 320;
    --screen-min-px: calc(var(--screen-min) * 1px);
    --screen-sm: 640;
    --screen-sm-px: calc(var(--screen-sm) * 1px);
    --screen-md: 896;
    --screen-md-px: calc(var(--screen-md) * 1px);
    --screen-lg: 1024;
    --screen-lg-px: calc(var(--screen-lg) * 1px);
    --screen-xl: 1280;
    --screen-xl-px: calc(var(--screen-xl) * 1px);
    --screen-max: 1500;
    --screen-max-px: calc(var(--screen-max) * 1px);

    --spacing-normal: 38;
    --spacing-normal-px: calc(var(--spacing-normal) * 1px);
    --spacing-double: 76;
    --spacing-double-px: calc(var(--spacing-double) * 1px);

    --spacing-nav-button-min: 18;
    --spacing-nav-button-min-px: calc(var(--spacing-nav-button-min) * 1px);
    --spacing-nav-button-max: 48;
    --spacing-nav-button-max-px: calc(var(--spacing-nav-button-max) * 1px);

    --spacing-nav-button-fluid-delta: calc((var(--spacing-nav-button-max) - var(--spacing-nav-button-min)) / (var(--screen-md) - var(--screen-sm)));
    --spacing-nav-button-fluid-modifier: calc(var(--spacing-nav-button-max-px) - var(--screen-md-px) * var(--spacing-nav-button-fluid-delta));
    --spacing-nav-button-fluid: clamp(var(--spacing-nav-button-min-px), calc(calc(var(--spacing-nav-button-fluid-delta) * 100) * 1vi) + var(--spacing-nav-button-fluid-modifier), var(--spacing-nav-button-max-px));

    --size-button: 48;
    --size-button-px: calc(var(--size-button) * 1px);
    --size-nav-button-min: 100;
    --size-nav-button-min-px: calc(var(--size-nav-button-min) * 1px);
    --size-nav-button-max: 160;
    --size-nav-button-max-px: calc(var(--size-nav-button-max) * 1px);

    --info-modal-fluid-delta: calc((var(--size-nav-button-max) - var(--size-nav-button-min)) / (var(--screen-md) - var(--screen-sm)));
    --info-modal-fluid-modifier-size-nav-button: calc(var(--size-nav-button-max-px) - var(--screen-md-px) * var(--info-modal-fluid-delta));
    --info-modal-fluid-modifier-spacing-x: calc((var(--size-nav-button-max-px) + var(--spacing-normal-px)) - var(--screen-md-px) * var(--info-modal-fluid-delta));

    --size-nav-button-fluid: clamp(var(--size-nav-button-min-px), calc(calc(var(--info-modal-fluid-delta) * 100) * 1vi) + var(--info-modal-fluid-modifier-size-nav-button), var(--size-nav-button-max-px));
    --spacing-x-info-modal-fluid: clamp(var(--size-nav-button-min-px) + var(--spacing-normal-px), calc(calc(var(--info-modal-fluid-delta) * 100) * 1vi) + var(--info-modal-fluid-modifier-spacing-x), var(--size-nav-button-max-px) + var(--spacing-normal-px));
    --spacing-y-info-modal: calc(var(--spacing-normal-px) * 2 + var(--size-button-px));

    --mobile-menu-font-size-min: 14;
    --mobile-menu-font-size-min-px: calc(var(--mobile-menu-font-size-min) * 1px);
    --mobile-menu-font-size-max: 24;
    --mobile-menu-font-size-max-px: calc(var(--mobile-menu-font-size-max) * 1px);
    --mobile-menu-font-size-delta: calc((var(--mobile-menu-font-size-max) - var(--mobile-menu-font-size-min)) / (var(--screen-sm) - var(--screen-min)));
    --mobile-menu-font-size-modifier: calc(var(--mobile-menu-font-size-max-px) - var(--screen-sm-px) * var(--mobile-menu-font-size-delta));
    --mobile-menu-font-size-fluid: clamp(var(--mobile-menu-font-size-min-px), calc(calc(var(--mobile-menu-font-size-delta) * 100) * 1vi) + var(--mobile-menu-font-size-modifier), var(--mobile-menu-font-size-max-px));

    --mobile-menu-line-height-fluid: clamp(1.25rem, 0.25rem + 5vi, 2.25rem);
    --mobile-menu-spacing-y-fluid: clamp(0.375rem, 0.25rem + 0.625vi, 0.5rem);
    --mobile-menu-spacing-x-fluid: clamp(0.5rem, 0.25rem + 1.25vi, 0.75rem);
    --mobile-menu-gap-fluid: clamp(0.375rem, 0.125rem + 1.25vi, 0.625rem);
    --mobile-menu-border-radius-fluid: clamp(0.125rem, 0rem + 0.625vi, 0.25rem);
    --mobile-menu-icon-size-fluid: clamp(0.875rem, 0.25rem + 3.125vi, 1.5rem);
    --mobile-menu-input-height-fluid: clamp(2.75rem, 1.75rem + 5vi, 3.75rem);

    @font-face {
      font-family: 'PF DIN Mono';
      src: local('PFDINMono-Regular'),
           url('@/assets/fonts/PFDINMono-Regular.woff2') format('woff2'),
           url('@/assets/fonts/PFDINMono-Regular.woff') format('woff');
      font-weight: normal;
      font-style: normal;
      font-display: swap;
    }

    @font-face {
      font-family: 'PF DIN Mono';
      src: local('PFDINMono-Medium'),
           url('@/assets/fonts/PFDINMono-Medium.woff2') format('woff2'),
           url('@/assets/fonts/PFDINMono-Medium.woff') format('woff');
      font-weight: 500;
      font-style: normal;
      font-display: swap;
    }

    font-family: 'din-2014', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
    line-height: 1.5;
    font-weight: 400;

    color-scheme: light dark;

    scrollbar-color: var(--scrollbar-foreground) var(--scrollbar-background);

    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

    ::selection {
      color: hsl(var(--background));
      background-color: hsl(var(--foreground));
    }

    input:-webkit-autofill,
    input:-webkit-autofill:focus {
      -webkit-box-shadow: 0 0 0 50px white inset;
    }

    input:-webkit-autofill,
    input:-webkit-autofill:hover,
    input:-webkit-autofill:focus,
    textarea:-webkit-autofill,
    textarea:-webkit-autofill:hover,
    textarea:-webkit-autofill:focus,
    select:-webkit-autofill,
    select:-webkit-autofill:hover,
    select:-webkit-autofill:focus {
      -webkit-text-fill-color: hsl(var(--gray-600));
      -webkit-box-shadow: 0 0 0px 1000px white inset;
      transition: background-color 5000s ease-in-out 0s;
    }

    input:-webkit-autofill::first-line,
    input:-webkit-autofill,
    input:-webkit-autofill:hover,
    input:-webkit-autofill:focus,
    input:-webkit-autofill:active,
    input::-internal-input-suggested,
    textarea:-webkit-autofill::first-line,
    textarea:-webkit-autofill,
    textarea:-webkit-autofill:hover,
    textarea:-webkit-autofill:focus,
    textarea:-webkit-autofill:active,
    textarea::-internal-input-suggested {
      font-family: 'din-2014', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
      font-weight: 400;
      color: hsl(var(--gray-600));
    }
  }

  .dark {
    --background: 240 4% 14%;
    --foreground: 0 0% 100%;
    --card: var(--background);
    --card-foreground: var(--foreground);
    --popover: var(--background);
    --popover-foreground: var(--foreground);
    --primary: var(--foreground);
    --primary-foreground: 222.2 47.4% 11.2%;
    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: var(--foreground);
    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;
    --accent: var(--gray-700);
    --accent-foreground: var(--foreground);
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;
    --success: 142 70.6% 45.3%;
    --success-foreground: 210 40% 98%;
    --border: var(--gray-700);
    --input: var(--gray-500) / 50%;
    --ring: 212.7 26.8% 83.9%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;

    --gray-100: 240 9.7% 93.9%;
    --gray-200: 240 4.6% 87.3%;
    --gray-300: 240 3% 80.6%;
    --gray-500: 240 1.3% 53.9%;
    --gray-600: 240 1.4% 40.6%;
    --gray-700: 240 2.8% 27.3%;
    --gray-800: 240 4.2% 13.9%;

    --scrollbar-foreground: hsl(var(--gray-700));
    --scrollbar-background: transparent;
  }
}

@layer base {
  * {
    @apply border-border;
  }

  html {
    @apply size-full;
  }

  body {
    @apply size-full bg-background text-gray-600 m-0 p-0 min-w-80;
  }

  .dark body {
    @apply text-gray-300;
  }

  #root {
    @apply size-full min-w-80;
  }

  h1, h2, h3 {
    @apply text-gray-800 font-bold uppercase tracking-[3px];
  }

  .dark h1, .dark h2, .dark h3 {
    @apply text-white;
  }

  .dark input:-webkit-autofill,
  .dark input:-webkit-autofill:focus {
    -webkit-box-shadow: 0 0 0 50px hsl(var(--gray-800) / 85%) inset;
  }

  .dark input:-webkit-autofill,
  .dark input:-webkit-autofill:hover,
  .dark input:-webkit-autofill:focus,
  .dark textarea:-webkit-autofill,
  .dark textarea:-webkit-autofill:hover,
  .dark textarea:-webkit-autofill:focus,
  .dark select:-webkit-autofill,
  .dark select:-webkit-autofill:hover,
  .dark select:-webkit-autofill:focus {
    -webkit-box-shadow: 0 0 0px 1000px hsl(var(--gray-800) / 85%) inset;
    transition: background-color 5000s ease-in-out 0s;
  }
}

@layer components {
  .absolute-center {
    @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2;
  }

  .center-right {
    @apply absolute top-1/2 right-0 -translate-y-1/2;
  }

  .center-left {
    @apply absolute top-1/2 left-0 -translate-y-1/2;
  }

  .gallery-top-right {
    @apply absolute top-normal right-normal;
  }

  .gallery-top-left {
    @apply absolute top-normal left-normal;
  }

  .gallery-bottom-right {
    @apply absolute bottom-normal right-normal;
  }

  .gallery-bottom-left {
    @apply absolute bottom-normal left-normal;
  }

  .contact-divider {
    @apply content-[''] block absolute top-0 -right-[38px] w-[2px] h-[62px] bg-gray-300 rotate-[28deg];
  }

  .dark .contact-divider {
    @apply bg-gray-600;
  }

  .info-modal.requires-scroll,
  .contact-modal.requires-scroll {
    @apply py-[calc(var(--spacing-y-info-modal)_-_var(--spacing-double-px))];
  }

  .info-modal-wrapper.requires-scroll,
  .contact-modal.requires-scroll [data-radix-scroll-area-viewport] {
    @apply py-double [mask-image:linear-gradient(to_bottom,_rgba(0,_0,_0,_0),_rgba(0,_0,_0,_1)_var(--spacing-double-px),_rgba(0,_0,_0,_1)_calc(100%_-_var(--spacing-double-px)),_rgba(0,_0,_0,_0))];
  }
}

